ghost/admin/app/styles/layouts/editor.css
/* ... */
/* NEW editor
/* ---------------------------------------------------------- */

.gh-main > section.gh-editor-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
    height: 100%;
    background-color: white;
}

.gh-editor-header {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    padding: 0 30px;
}
@media (max-width: 750px) {
    .gh-editor-header {
        padding: 0 4vw;
    }
}

.gh-editor-header-small {
    z-index: 100;
    height: 43px;
    padding: 0;
    padding-left: 15px;
    border-bottom: var(--lightgrey) 1px solid;
    background-color: #fff;
}

.gh-editor-header-small .gh-publishmenu {
    line-height: 0;
}

.gh-editor-header-small .post-settings {
    padding: 13px 15px;
}

.gh-editor-status {
    color: var(--midgrey);
    font-size: 1.3rem;
    font-weight: 300;
}

.gh-editor-container {
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    padding: 10vw 4vw;
}

.gh-editor-inner {
    height: 100%;
    max-width: 760px;
    margin: 0 auto;
}

.gh-editor-title {
    display: block;
    width: 100%;
    min-height: auto;
    margin-bottom: 2vw;
    border: none;
    color: var(--darkgrey);
    font-size: 3.2rem;
    line-height: 1.15em;
    font-weight: bold;
    letter-spacing: 0.8px;
}

.gh-editor-wordcount {
    position: fixed;
    bottom: 0;
    padding: 10px;
}

@media (max-width: 1200px) {
    .gh-editor-wordcount {
        display: none;
    }
}

/* SimpleMDE editor
/* ---------------------------------------------------------- */

.gh-editor-title {
    padding: 0;
}

.gh-editor-title::placeholder {
    font-weight: bold;
}

.gh-markdown-editor {
    position: relative;
    z-index: 0;
    width: 100%;
    height: 100vh;
    overflow-y: auto;
}

.gh-markdown-editor-pane,
.gh-markdown-editor-preview {
    padding: 10vw 4vw;
}

.gh-markdown-editor-side-by-side .gh-markdown-editor-pane,
.gh-markdown-editor-side-by-side .gh-markdown-editor-preview {
    padding: 4vw;
}

.gh-markdown-editor-side-by-side {
    display: flex;
    flex-direction: row;
    overflow-y: hidden;
    margin-top: 43px;
}

.gh-markdown-editor-side-by-side .gh-markdown-editor-pane,
.gh-markdown-editor-side-by-side .gh-markdown-editor-preview {
    width: 50%;
    height: 100%;
    overflow-y: auto;
}

.gh-markdown-editor-preview {
    border-left: var(--lightgrey) 1px solid;
}

.gh-markdown-editor-preview a {
    text-decoration: underline;
}

.gh-editor-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 46px;
    min-height: 46px;
    border-top: var(--lightgrey) 1px solid;
}

@media (max-width: 800px) {
    .gh-editor-footer {
        display: none;
    }
}

.gh-editor-footer .editor-toolbar {
    border: none;
    background: transparent;
    border-radius: 0;
    opacity: 1;
}

.gh-editor-footer .editor-toolbar:before,
.gh-editor-footer .editor-toolbar:after {
    content: none;
}

.gh-editor-footer .editor-toolbar a:focus {
    outline: none;
}

.gh-editor .CodeMirror {
    overflow: visible;
    padding: 0;
    background: transparent;
}

.gh-editor .CodeMirror-cursor {
    border-width: 3px;
    border-color: var(--blue);
}

/* fix visible scrollbars when OSX is set to show them */
.gh-editor .CodeMirror-scroll {
    overflow: visible !important;
}

.gh-editor .CodeMirror-scroll:hover {
    cursor: text;
}

/* prevent markdown content showing after the preview if the preview is shorter */
.gh-editor-preview .CodeMirror-scroll {
    display: none;
}

.gh-editor .gh-editor-title,
.gh-editor .CodeMirror-wrap {
    max-width: 760px;
    margin-right: auto;
    margin-left: auto;
    border: none;
    background: transparent;
}

.gh-editor .CodeMirror pre {
    padding: 0;
    color: color(var(--darkgrey) l(+5%));
    font-family: “Consolas”, monaco, monospace;
    font-size: 1.6rem;
}

@media (max-width: 960px) {
    .gh-editor .CodeMirror pre {
        font-size: 1.4rem;
    }
}

.gh-editor .CodeMirror .cm-strong {
    color: var(--darkgrey);
}

.gh-editor .CodeMirror .cm-url {
    text-decoration: underline;
}

.gh-editor .editor-preview {
    height: auto;
    margin-top: 4px;
    padding: 0;
    background: transparent;
}

.gh-editor .editor-preview,
.gh-markdown-editor-preview {
    color: color(var(--darkgrey) l(+5%));
    font-family: Georgia, Times, Serif;
    font-size: 1.9rem;
}

.gh-editor .editor-preview h1,
.gh-markdown-editor-preview h1,
.gh-editor .editor-preview h2,
.gh-markdown-editor-preview h2,
.gh-editor .editor-preview h3,
.gh-markdown-editor-preview h3,
.gh-editor .editor-preview h4,
.gh-markdown-editor-preview h4,
.gh-editor .editor-preview h5,
.gh-markdown-editor-preview h5,
.gh-editor .editor-preview h6,
.gh-markdown-editor-preview h6 {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.gh-markdown-editor-preview-title {
    margin-bottom: 2vw;
}

.gh-editor-drop-target,
.gh-editor-image-upload {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9999;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border: 2px solid var(--blue);
    background-color: rgba(255,255,255,0.6);
}

.gh-editor-drop-target .drop-target-message {
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
}

.gh-editor-image-upload.-error {
    border: 2px solid var(--red);
}

.gh-editor-image-upload-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 80%;
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
}

.gh-editor-image-upload .gh-progress-container-progress {
    width: 100%;
}
/* ... */

